[package]
name = "test"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
actix-web = "4.11.0"
axum = "0.8.4"
bevy = "0.16.1"
bindgen = "0.72.1"
cssparser = "0.35.0"
datafusion = "50.0.0"
diesel = "2.3.2"
ethers = "2.0.14"
iced = "0.13.1"
image = "0.25.8"
leptos = "0.8.9"
# TODO(zbarsky): Is this a bug with nuid not building?
#nats = "0.25.0"
oxc = "0.90.0"
#perseus = "0.4.2"
polars = "0.51.0"
quinn = "0.11.9"
redis = "0.32.5"
reqwest = "0.12.23"
swc = "40.0.0"
tauri = "2.8.5"
tao = "0.34.3"
tonic = "0.14.2"
tower = "0.5.2"
warp = "0.4.2"
#wasmer = "6.0.1"
wasmtime = "37.0.0"
wasm-bindgen = "0.2.103"
#webrender = "0.61.0"
wgpu = "26.0.1"
wry = "0.53.3"
yew = "0.21.0"

