load("@bazel_lib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files([
    "declare_toolchains.bzl",
    "module_extension.bzl",
    "toolchain_utils.bzl",
])

bzl_library(
    name = "declare_toolchains",
    srcs = ["declare_toolchains.bzl"],
    deps = [
        ":toolchain_utils",
        "//rs/experimental/platforms:triples",
        "@rules_rust//rust:toolchain",
        "@rules_rust//rust/platform:triple",
    ],
)

bzl_library(
    name = "module_extension",
    srcs = ["module_extension.bzl"],
    deps = [
        ":toolchain_utils",
        "//rs/experimental/platforms:triples",
        "//rs/private:cargo_repository",
        "//rs/private:host_tools_repository",
        "//rs/private:stdlib_repository",
        "//rs/private:toolchains_repository",
        "@rules_rust//rust/platform:triple",
        "@rules_rust//rust/private:repository_utils",
    ],
)

bzl_library(
    name = "toolchain_utils",
    srcs = ["toolchain_utils.bzl"],
)
