load("@rules_rs//rs:rust_library.bzl", "rust_library")
load("@rules_rs//rs:rust_test.bzl", "rust_test")
load("@workspace_hyphen_dep_aliases//:defs.bzl", "aliases", "all_crate_deps")

rust_test(
    name = "consumer_test",
    aliases = aliases(),
    srcs = ["src/lib.rs"],
    deps = all_crate_deps(normal = True),
)
